# cryptoClients

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
lib/: CMakeLists.txt  OKX_Client.cpp  OKX_Client.hpp  binanceClient.cpp  cryptoClient.cpp
